syntax = "proto3";
package rollapp.hub;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/hub/types";

// Hub is a proto message that represents the metadata of the Hub
message Hub {
  // registeredDenoms is a set of registered denom bases on this rollapp
  map<string, Empty> registered_denoms = 10;
}

message Empty {}
