syntax = "proto3";
package rollapp.hub;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "hub/state.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/hub/types";

// Query provides defines the gRPC querier service.
service Query {
   // State returns the state of the genesis event.
   rpc State(QueryStateRequest) returns (QueryStateResponse) {
    option (google.api.http).get = "/dymensionxyz/dymension-rdk/hub/state";
  }
}

// QueryStateRequest is the request type for the Query/State RPC method.
message QueryStateRequest {}

// QueryStateResponse is the response type for the Query/State RPC method.
message QueryStateResponse {
  // state holds the state of the genesis event
  State state = 1 [(gogoproto.nullable) = false];
}